Recipes Detail Screen Implemented.
- When clicking an Item (recipe) from the list, It opens a Detail Screen with the Info of the Recipe, such as, Name, Story, Images, Ingredients and Steps;
- Some Refactor of the code was done in order to meet this feature and overall stability.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <!--Collections List-->
     <string name="recipes_count_text">%s recipes.</string>
     <string name="end_of_list_reached">No more data to show!</string>
+
+    <!--Recipe Detail-->
+    <string name="ingredients_title">Ingredients:</string>
+    <string name="steps_title">Steps:</string>
+
 </resources>
